[project]
name = "harpoon"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.58",
    "valohai-cli>=0.28.0",
    "valohai-utils>=0.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[project.scripts]
prophet = "prophet.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prophet"]

[tool.uv]
link-mode = "copy"
