[project]
name = "harpoon"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.58",
    "valohai-cli>=0.28.0",
    "valohai-utils>=0.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prophet"]

[project.scripts]
batman = "batman.__main__:cli"
genesis = "genesis.__main__:cli"
mech = "mech.__main__:cli"
prism = "prism.__main__:cli"
prophet = "prophet.__main__:cli"

[tool.uv]
link-mode = "copy"  # or uv will whine about not being able to hardlink wheels
